tests/compiler_errors/fn_redef_const.tlp
const foo 1 end
fn foo do end